Nombre del artefacto war

--- a/build.gradle
+++ b/build.gradle
@@ -27,3 +27,7 @@ dependencies {
 	testCompile 'org.mockito:mockito-all:1.10.19'
 	testCompile 'junit:junit:4.12'
 }
+
+war {
+    archiveName = 'DiandaluWEB.war'
+}
